Another attempt at fixing moon overflow

--- a/src/components/Layout/Layout.scss
+++ b/src/components/Layout/Layout.scss
@@ -1378,12 +1378,6 @@ table td {
             font-size: 14px;
         }
     }
-
-    #gatsby-focus-wrapper,
-    body {
-        width: 100%;
-        overflow-x: hidden;
-    }
 }
 
 .card-elevated {
